fix(theme-frames-x): reduce gap size for large chip list items

--- a/packages/themes/frames-x/src/styles/scss/_chip-list.scss
+++ b/packages/themes/frames-x/src/styles/scss/_chip-list.scss
@@ -56,7 +56,7 @@
     }
 
     &--lg {
-      gap: 8px;
+      gap: 6px;
 
       .cck-chip-list__input {
         height: 44px;
